Play the last link when using function 2(Once)
이제 2번 기능 작동시, 가장 마지막에 있는 링크를 재생합니다. 다만, 아직은 1번밖에 사용하지 못합니다!
Func_1의 한줄 띄우기 구문을 응용하여, 줄 띄어쓰기 갯수와 무관하게 마지막의 링크를 재생할 수 있도록 했음(for문과 line_number수를 기반으로 if, else을 사용해 fgets로 줄을 밑으로 내리도록 설계)

--- a/MP/MusicPlayer/MusicPlayer.vcxproj
+++ b/MP/MusicPlayer/MusicPlayer.vcxproj
@@ -141,6 +141,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Func_1.c" />
+    <ClCompile Include="Func_2.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+      </ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="GUI.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
