--- a/MP/MusicPlayer/MusicPlayer.vcxproj.filters
+++ b/MP/MusicPlayer/MusicPlayer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Func_2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="head.h">
