Add Main and Func 1, 2 Window title.
메인화면 및 1번, 2번기능에 창 제목을 추가하였습니다.
메인화면에선 프로그램명을, 음악 실행 중일땐 [플레이한 휫수/총 음악 수]를 출력하게 됩니다.
이제 음악을 얼만큼 재생했고, 얼마나 남았는지 바로 확인할 수 있단 말이지요!

Func 1 and 2 Check the number of songs and print out the window title.
[Number of Music plays / Total number of Music]

--- a/MP/MusicPlayer/MusicPlayer.vcxproj
+++ b/MP/MusicPlayer/MusicPlayer.vcxproj
@@ -145,6 +145,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
       </ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Func_3.c" />
     <ClCompile Include="GUI.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
