You input only number in menu screen, automatic run
이제 메인메뉴 및 곡 선택화면까지는 숫자만 입력하면 번거롭게 엔터키를 누르지 않아도 자동으로 다음 화면으로 넘어갑니다.

--- a/MP/MusicPlayer/MusicPlayer.vcxproj.filters
+++ b/MP/MusicPlayer/MusicPlayer.vcxproj.filters
@@ -15,13 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Mlist.txt">
+      <Filter>소스 파일</Filter>
+    </Text>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="Func_1.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Func_2.c">
@@ -30,15 +29,19 @@
     <ClCompile Include="Func_3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Func_4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="GUI.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="head.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="Mlist.txt">
-      <Filter>소스 파일</Filter>
-    </Text>
   </ItemGroup>
 </Project>
