--- a/MP/MusicPlayer/MusicPlayer.vcxproj
+++ b/MP/MusicPlayer/MusicPlayer.vcxproj
@@ -18,6 +18,20 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Mlist.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Func_1.c" />
+    <ClCompile Include="Func_2.c" />
+    <ClCompile Include="Func_3.c" />
+    <ClCompile Include="Func_4.c" />
+    <ClCompile Include="GUI.c" />
+    <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="head.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{B9789F01-9305-439B-8162-20A957BD4F0D}</ProjectGuid>
@@ -52,6 +66,7 @@
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -139,22 +154,6 @@
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Func_1.c" />
-    <ClCompile Include="Func_2.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-      </ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="Func_3.c" />
-    <ClCompile Include="GUI.c" />
-    <ClCompile Include="main.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="head.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="Mlist.txt" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
